# project-microservice

./: Start.md  pyproject.toml  technical_documentation.md
auth/: alembic.ini  database.py  main.py  models.py  schemas.py  utils.py
auth/alembic/: env.py
auth/alembic/versions/: 01e190bd2b55_add_groups_table.py  85ab58fc22e6_add_user_group_relationship.py  a0b1bbf1cf15_initial_migration_users_table.py
auth/tests/: conftest.py  test_auth_login.py  test_auth_protected.py
chat/: connection.py  frontend.js  main.py  redis_client.py  schemas.py
frontend/: README.md  chat.html  chat.js  index.html  login.js  server.py  style.css
nginx/: SETUP.md  nginx.conf
stream/: main.py
stream/static/: index.html  script.js  styles.css
